other-mpol/add-imagepullsecrets/.chainsaw-test/pod-not-patched.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod04
spec:
  containers:
  - name: pod04-01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: pod04-02
    image: ghcr.io/kyverno/test-busybox:1.35
  imagePullSecrets:
  - name: my-secret
