other-mpol/add-imagepullsecrets/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: pod01-01
    image: corp.reg.com/busybox:1.35
  - name: pod01-02
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: pod02-01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: pod02-02
    image: corp.reg.com/busybox:1.35
  imagePullSecrets:
  - name: foo-bar
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
spec:
  containers:
  - name: pod03-01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: pod03-02
    image: corp.reg.com/busybox:1.35
  imagePullSecrets:
  - name: my-secret
---
apiVersion: v1
kind: Pod
metadata:
  name: pod04
spec:
  containers:
  - name: pod04-01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: pod04-02
    image: ghcr.io/kyverno/test-busybox:1.35
